Fix column misalignment in calendar on Firefox

--- a/static/scss/wireframe.scss
+++ b/static/scss/wireframe.scss
@@ -1068,7 +1068,7 @@ nav {
 	thead {
 		td {
 			text-align: center;
-			width: calc(100% / 7);
+			width: (100% / 7);
 		}
 	}
 	tbody {
